Minor alignment fixes (#184)
* Minor alignment fixes

--- a/gulp/assets/stylesheets/base/_elements.scss
+++ b/gulp/assets/stylesheets/base/_elements.scss
@@ -140,7 +140,7 @@ p {
  */
 ul, ol {
   margin: 36px 0 0 0;
-  padding: 0 0 0 24px;
+  padding: 0 0 0 18px;
 }
 
 li {
