--- a/gulp/assets/stylesheets/components/_space-actions.scss
+++ b/gulp/assets/stylesheets/components/_space-actions.scss
@@ -7,8 +7,8 @@
   padding: 0;
   list-style: none;
   position: fixed;
-  bottom: 18px;
-  right: 18px;
+  bottom: 30px;
+  right: 30px;
   z-index: 10;
 
   li {
@@ -41,10 +41,10 @@
   }
 
   .space-actions-edit a {
-    background-image: url(../assets/images/space/edit-icon.svg);
+    background-image: url(../assets/images/space/edit-icon-2.svg);
   }
 
   .space-actions-share a {
-    background-image: url(../assets/images/space/share-icon.svg);
+    background-image: url(../assets/images/space/share-icon-2.svg);
   }
 }
