--- a/gulp/assets/stylesheets/components/_space-page.scss
+++ b/gulp/assets/stylesheets/components/_space-page.scss
@@ -8,7 +8,7 @@
 .space-page {
   max-width: 800px;
   margin: 0 auto;
-  padding: 120px 0 60px 0;
+  padding: 120px 24px 60px 0;
 }
 
 
